Fixing margin for section and aligning text

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -114,15 +114,13 @@ h2, h3 {
     display: flex;
     flex-flow: row wrap;
     justify-content: space-around;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-
-.types {
     font-size: 150%;
     text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 95%;
 }
+
 
 .description-type {
     max-width: 300px;
@@ -308,8 +306,8 @@ footer {
     }
     /* Yoga Positions Area*/
     .names {
-        margin-left: 0;
-        margin-right: 0;
+        margin-left: auto;
+        margin-right: auto;
         text-align: center;
     }
 
